# StreamTape

./: .gitignore  README.md  pyproject.toml  readme.md  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  custom.yml  feature_request.yml
docs/: Account.html  Convertation.html  FileManager.html  Stream.html  index.html
docs/streamtape/: ApiResponse.html  BaseConfig.html  Remote.html  Upload.html
streamtape/: Account.py  ApiResponse.py  BaseConfig.py  Convertation.py  FileManager.py  Remote.py  Stream.py  Upload.py
